# macrospend-macrospend-tracker

./: BETA_INSTALL_GUIDE.md  PLAN.md  README.md  RELEASE.md  package.json  tauri.conf.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: deeplink.rs  ingest.rs  main.rs  sampler.rs  storage.rs
